# Embedded-System

./: Readme.md
School Project/: Readme.md
School Project/Driver Testing/: CMakeLists.txt
School Project/Driver Testing/microsd/: CMakeLists.txt  Note.txt  flash_benchmark.c  flash_benchmark.h  main.c  sd_card.c  sd_card.h
School Project/Driver Testing/microsd/fatfs/: diskio.c  diskio.h  ff.c  ff.h
School Project/Driver Testing/spi/: CMakeLists.txt  note.txt
School Project/Driver Testing/spi/master_spi/: CMakeLists.txt  master_spi.c
School Project/Driver Testing/spi/slave_spi/: CMakeLists.txt  slave_spi.c
School Project/Driver Testing/wifi/: CMakeLists.txt  Note.txt  lwipopts.h
School Project/Driver Testing/wifi/master/: CMakeLists.txt  master.c  secrets.h
School Project/Driver Testing/wifi/slave/: CMakeLists.txt  secrets.h  slave.c
School Project/Output from Test/: RESULTS.CSV  datasheet.csv  report.csv
School Project/Project/: CMakeLists.txt  README.md  bench_erase.c  bench_erase.h  bench_read.c  bench_read.h  bench_write.c  bench_write.h  chip_db.c  chip_db.h  flash_benchmark.c  flash_benchmark.h  lwipopts.h  main.c  report.c  report.h  sd_card.c  sd_card.h
School Project/Project/config/: config.h
School Project/Project/dhcpserver/: dhcpserver.c  dhcpserver.h
School Project/Project/fatfs/: diskio.c  ffconf.h
School Project/Project/web/: http_server.c  http_server.h
